--- a/ImprovedUI/Public/Game/GUI/StateMachine_c.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine_c.xaml
@@ -1791,6 +1791,12 @@
                         <ls:AddSubstate Name="GammaCalibration"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
+                <ls:StateEvent Name = "OpenSignUp">
+                    <ls:StateEvent.Actions>
+                        <ls:PushState Name="SignUp"/>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
             </ls:State.Events>
         </ls:State>
 
